# UML-MCP

./: .gitignore  README.md  pyproject.toml  test_runner.py
cli/: main.py
examples/: ecommerce_domain.json
grpc_server/: client_example.py  server.py
llm/: gemini_client.py  mock_gemini_client.py  prompts.py
mcp_server/: mcp_tools.py  schemas.py  server.py
proto/: uml_service.proto
tests/integration/: test_cli_end_to_end.py  test_grpc_roundtrip.py
tests/unit/: test_gemini_client.py  test_renderer.py  test_validators.py
uml/: plantuml_renderer.py  validators.py
