[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UMLmcp"
version = "0.0.1"
authors = [
    { name = "Gemini", email = "gemini@google.com" },
]
description = "A Python service that uses Google Gemini to generate PlantUML code for UML Class and Sequence diagrams."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/google/gemini-cli"
